--- a/css/update.css
+++ b/css/update.css
@@ -4,4 +4,23 @@
 
 .our-clients.our-clients-blocks.mega-section {
     height: 270px;
-} 
+}
+
+.plan.wow.fadeInUp {
+    height: 550px;
+}
+
+span.price-orange {
+    color: #e4a216;
+}
+
+.plan-cta {
+    position: absolute;
+    bottom: 35px;
+    transform: translateX(-50%);
+    left: 50%;
+}
+
+.cta-btn.btn-outline.btn-price {
+    width: 230px!important;
+}
